Version 0.9.3
http://svn.edgewall.org/repos/babel/tags/0.9.3/
(?, from branches/stable/0.9.x)

* Fixed invalid message extraction methods causing an UnboundLocalError.
	

Version 0.9.2
http://svn.edgewall.org/repos/babel/tags/0.9.2/
(Feb 4 2007, from branches/stable/0.9.x)

 * Fixed catalogs' charset values not being recognized (ticket #66).
 * Numerous improvements to the default plural forms.
 * Fixed fuzzy matching when updating message catalogs (ticket #82).
 * Fixed bug in catalog updating, that in some cases pulled in translations
   from different catalogs based on the same template.
 * Location lines in PO files do no longer get wrapped at hyphens in file
   names (ticket #79).
 * Fixed division by zero error in catalog compilation on empty catalogs
   (ticket #60).


Version 0.9.1
http://svn.edgewall.org/repos/babel/tags/0.9.1/
(Sep 7 2007, from branches/stable/0.9.x)

 * Fixed catalog updating when a message is merged that was previously simple
   but now has a plural form, for example by moving from `gettext` to
   `ngettext`, or vice versa.
 * Fixed time formatting for 12 am and 12 pm.
 * Fixed output encoding of the `pybabel --list-locales` command.
 * MO files are now written in binary mode on windows (ticket #61).


Version 0.9
http://svn.edgewall.org/repos/babel/tags/0.9.0/
(Aug 20 2007, from branches/stable/0.9.x)

 * The `new_catalog` distutils command has been renamed to `init_catalog` for
   consistency with the command-line frontend.
 * Added compilation of message catalogs to MO files (ticket #21).
 * Added updating of message catalogs from POT files (ticket #22).
 * Support for significant digits in number formatting.
 * Apply proper "banker's rounding" in number formatting in a cross-platform
   manner.
 * The number formatting functions now also work with numbers represented by
   Python `Decimal` objects (ticket #53).
 * Added extensible infrastructure for validating translation catalogs.