@@ -2,7 +2,9 @@ Version 0.9.3
 http://svn.edgewall.org/repos/babel/tags/0.9.3/
 (?, from branches/stable/0.9.x)
 
-* Fixed invalid message extraction methods causing an UnboundLocalError.
+ * Fixed invalid message extraction methods causing an UnboundLocalError.
+ * The stripping of the comment tags in comments is optional now and
+   is done for each line in a comment.
 	
 
 Version 0.9.2
